fix: long entries > table overflow css fix

--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -18,20 +18,19 @@
 .command-table {
     margin: 0 auto;
     text-align: left;
-    width: 80%;
     height: auto;
     border-collapse: collapse;
     overflow-y: auto;
     max-height: 100%;
+    width: 80%;
     max-width: 80%;
 }
 .table-cell {
     vertical-align: top;
     border: 1px solid #444444;
-    overflow: hidden;
-    width: 50%;
-    max-width: 50%;
+    overflow: auto;
     white-space: normal;
+    max-width: 40vw;
 }
 
 .repl-input {        
@@ -39,7 +38,7 @@
     height:10vh;
 }
 .repl-command-box {
-    width: 90%;            
+    width: 60%;            
     margin: auto;
     display: block;
 }
